feat(gateway): enhance JWT authentication and security